--- a/R-Presentaciones/Resumenes/Cuaderno.Rmd
+++ b/R-Presentaciones/Resumenes/Cuaderno.Rmd
@@ -1,3 +1,6 @@
+---
+output: html_document
+---
 # Resumen de  R
 
 Lista de temas
@@ -14,8 +17,15 @@ Lista de temas
 
 ## R elemental
 
+R tiene 5 clases de  objetos básicos o 'atómicos':
 
-```{r computing, comment=NA}
+* caracter
+* numerico (numeros reales)
+* enteros
+* complejos 
+* lógicos (True/False)
+
+```{r computing, comment=NA, eval=FALSE}
 x <- 1
 print(x)
 x
@@ -33,9 +43,12 @@ sem. = 7*dia.; yr. = 365.25*dia.; siglo. = 100*yr.
 grado. = pi/180
 sin(30*grado.)
 ```
+Los números en R son generalmente tratados como objetos númericos (números reales de doble precisión). Esto significa que si tu ves numeros como `1` o `2`  en R, se debe pensar como enteros, pero detras  ellos son escritos como `1.00` o `2.00`. Si se quiere especificar un entero se debe escribir con el sufijo `L`.
+
+Existe en R un número especial `Inf` que representa al infinito. 
 
 ### Algunas funciones  elementales
-```{r computinga, comment=NA}
+```{r computinga, comment=NA, eval=FALSE}
 
 round(1234.679)
 round(1234.679, -2)
@@ -75,21 +88,9 @@ Inf/Inf
 0/0
 
 ```
-### Variables de entorno
 
-```{r computingb, comment=NA}
-
-
-# Encuentra todas las variables en el entorno R. 
-ls()
-
-# Remueve todas las variables y mucho otros objetos
-
-rm(list = ls())
-
-```
 ### Operadores relacionales
-```{r computingc, comment=NA}
+```{r computingc, comment=NA, eval=FALSE}
 
 
 .5 == 1/2
@@ -99,7 +100,7 @@ all.equal(.3/.1,3)
 
 ###  Operadores de indexado con vectores
 
-``` {r computingd, comment=NA}
+``` {r computingd, comment=NA, eval=FALSE}
 x <-  c(3.2, 1.7, -11.3, -0.67, 4, 0.8)
 x[3]
 x[1:4]; x[c(2,3,5)]
@@ -114,7 +115,7 @@ x[-8]
 ```
 
 ### Operaciones elementales  con vectores
-``` {r computinge, comment=NA}
+``` {r computinge, comment=NA, eval=FALSE}
 x -1
 3 * x
 x^2
@@ -133,18 +134,61 @@ cumprod(x)
 summary(x)
 ```
 
-### Recycling
+### Recycling y operaciones vectorizadas
 
 ```{r computingf, comment=NA}
 x1 = c(1,2,3,4,5)
 y1 = c(1,2)
  x1*y1
+x1>=2
+y1==8
 
+q<- 1:4
+p <- 6:9
+r<-p + q
+r
+```
+
+Sin vectorización, se tiene algo como esto
+
+```{r computingfff, comment=NA, eval=FALSE}
+r <- numeric(length(q))
+for(i in seq_along(q)){
+  r <-q[i] + p[i]
+}
+r
+```
+Los objetos en R, tiene atributos, que son la metadata para el objeto. La metadata puede ser útil para describir al objeto.  Algunos ejemplos de atributos para objetos de R son:
+
+* names, dimnames
+* dimensions (matrices, arrays)
+* class (entero, numerico)
+* length
+* atributos definidos por el usuario-metadata.
+
+Los atributos de un objeto pueden ser accedidos usando la función `attributes()`. No todos los objetos en R contienen atributos.
+
+
+### Missing Value
+
+Estos valores son denotados por NA o NaN.
+
+- `is.na()` es usado para probar  si objetos son NA.
+- `is.nan()` es usado para probar si son NaN.
+-  Los valores NA tiene una clase, así ellos puede ser integerNA, characterNA, etc.
+- Un valor NaN es un valor NA, lo inverso no es cierto.
+
+```{r computinggg, comment=NA}
+z <- c(1, 2,NA, 10, 3)
+is.na(z)
+
+w <- c(2, 5, NaN, NA, 4)
+is.na(w)
 ```
 
 ### Generando secuencias
  
-```{r computingg, comment=NA}
+```{r computingg, comment=NA,eval=FALSE}
  
 1: 10
 5.7:-3.7
@@ -186,7 +230,7 @@ round(rnorm(5),3)
 
 ### Operadores lógicos
 
-```{r computingi, comment=NA}
+```{r computingi, comment=NA,eval=FALSE}
 v <- runif(8,-3,3)
 v > 0
 which(v>0)
@@ -243,7 +287,51 @@ triple(u,v)
 
 ```
 
+### Coerción
+
+```{r computingccc, comment=NA}
+
+# Coerción Implícita
+
+y <- c(1.7, 'a')
+y1 <- c(TRUE, 2)
+y2 <- c('d', TRUE)
+
+# Coerción Explícita: se usa la funcion as.
+
+x <- 0:8
+class(x)
+y <- as.numeric(x)
+z <- as.logical(x)
+q <- as.character(x)
+
+# Alguna veces cuando R, no puede hacer coerción a un objeto el resultado que produce `NA`.
+
+d <- c("a" , "b", "c")
+as.numeric(d)
+as.logical(d)
+```
+
+
+## Listas
+
+Las listas son un tipo especial de vector que puede contener elementos de diferentes clases. Las listas, en combinación con las funciones **apply** producen resultados optimos y útiles en el manejo de datos.
+
+Las listas pueden ser creadas usando la función  `list()`, que toma un número arbitrario de argumentos.
+
+```{r computingkkk, comment=NA}
+x <- list(1, 'f', TRUE)
+x1 <- vector("list", length = 6)
+
+```
+
+
 ##  Matrices
+
+Las matrices son vectores con un atributo de dimension. Este atributo es así mismo un vector entero de longitud 2 (número de filas y columnas ).
+
+Las matrices puede ser creadas  con las funciones `cbind()` y `rbind()`.
+
 
 ```{r computingk, comment=NA}
 
@@ -397,7 +485,15 @@ names(x)<-x; names(y)<-y
 outer(y, x, "^")
 
 ```
+
 ## Vectores y data frames
+
+Los data frames son usados para almacenar datos tabulares en R. El paquete `dplyr ` tiene un conjunto de funciones optimizadas para trabajar con data frames.
+Los data frames son representadas como un tipo especial de lista donde cada elemento de la lista tiene la misma longitud. Cada elemento de la lista puede ser visto como una columna y la longitud de cada elemento de la lista como el número de filas.
+
+A diferencia de las matrices,  los data frames pueden almacenar diferentes clases de elementos en cada columna. En adición al nombre de las columnas (predictors) los data frames tienen un atributo especial llamado `row.names` que indica la información de las filas en el data frame.
+
+Los data frames pueden ser creados explicitamente con la función `data.frame()` o puede usar coerción con otros tipos de objetos como las listas. Los data frames pueden ser convertidos a matrices con la función `data.matrix()`.
 
 ```{r computing1, comment=NA}
 v1<- c(59, 55, 53.5, 55, 52.5, 57.5, 53, 55)
@@ -474,31 +570,29 @@ Dfrm <- data.frame(df1 = v1, df2 = v2,
 Dfrm
 
 ```
-## Estructuras de control
-
-### if-else
-
-
-```{r computing3, comment=NA}
-## Generando un numero aleatorio uniforme
-
-x <- runif(1, 0, 10)
-if(x >3){
-  y <- "Hola R"
-}else {
-  y <-"Hola Python"
-}
-```
-
-## for
-
-```{r computing4, comment=NA}
-for(i in 1:8){
-  print(i)
-}
-```
 
 ##  Consiguiendo datos en y fuera de R
+
+
+Existen una cantidad importante de funciones para leer datos en R:
+
+- `read.table, read.csv`, para leer datos tabulares.
+- `readlines`, para leer lineas de archivo de texto.
+- `source`, para leer código fuente en R.
+- `dget` para leer código fuente en R.
+- `load` para leer workspaces de R.
+- `unserialize`, para leer objetos en R, de formato binario.
+
+También existen funciones para escribir datos:
+
+- `write.table`, para escribir datos tabulares en archivos de texto y conexiones.
+- `save`, para guardar un número arbitrario de objetos en formato binario.
+- `writeLines`, es para escribir  lineas de datos (caracteres) en archivo o conexión.
+- `dump`, lanza representaciones textuales de múltiples objetos de R.
+- `serialize`, es para convertir un objeto R, en formato binario y mostrarlo en un archivo o conexión-
+- `dput`, es para la salida de representación textual de objetos en R.
+
+
 
 ```{r computing 10, comment=NA, eval=FALSE}
 # Adquiriendo data en R
@@ -559,9 +653,58 @@ S1F1 <- S1F[S1$Location == 1, ]
 Ord1 <- order(S1$Month)
 S1[Ord1, ]
 S1
+
+S1$fLocation <- factor(S1$Location)
+S1$fSex <- factor(S1$Sex,labels=c("M","F"))
+S1$fSex
+
+names(S1)
+
+S1$fLocation <- factor(S1$Location,
+                    levels = c(2, 3, 1, 4))
+S1$fLocation
+
+
+Sq1 <- read.table(file = "squid1.txt", header = TRUE)
+Sq2 <- read.table(file = "squid2.txt", header = TRUE)
+Sq3 <- merge(Sq1, Sq2, by = "Sample")
+
+
+Sq3 <- merge(Sq1, Sq2, by = "Sample", all= TRUE)
+Sq3[1:14,]
+
+S1$fSex <- factor(S1$Sex, labels = c("M", "F"))
+S1$fLocation <- factor(S1$Location)
+str(S1)
+
+S1[S1$Location == 1 & S1$Year == 1, ]
+
+
+S4 <- S1[S1$Sex == 1, ]
+write.table(S4,
+     file = "MaleSquid.txt",
+     sep=" ", quote = FALSE, append = FALSE, na = "NA")
+     
+write.table(S4,
+     file = "MaleSquid.txt",
+     sep=",", quote = TRUE, append = FALSE, na = "NA")
+
+write.table(S4,
+     file = "MaleSquid.txt",
+     sep=" ", quote = TRUE, append = TRUE, na = "NA")
 ```
 
+
+
 ## Manipulación de Factores
+
+Los factores son usados para representar *datos categoricos* y pueden ser ordenados o no ordenados. Un factor pueder ser considerado como un vector entero donde cada entero tiene una etiqueta (*label*).
+
+Los factores son importantes en modelamiento estadístico y son usados por las funciones de modelamiento `lm()` o `glm()`.
+
+Usar factores con etiquetas es mejor que usar enteros ya que los factores son autodescriptivos. Por ejemplo tener dos variables con los valores `R` y `Python`  es mejor que tener variables con los valores 1 y 2. 
+
+Los objetos factores pueden ser creados con la función `factor()`.
 
 ```{r computing 11, comment=NA}
 
@@ -617,6 +760,106 @@ table(num.to.factor2)
 num.to.factor2
 ```
 
+## Formato  textual para almacenar datos
+
+Aquí hacemos uso  de las funciones `dump()` y `dput()` para  crear representaciones descriptivas de objetos, que entre sus características preserva la metadata.
+```{r computing 134, comment=NA}
+
+### Creamos un data frame
+df1 <- data.frame(a=2, b ="c")
+dput(df1)  # Forma de code R, preservando metadata
+
+# Guardemos la salida en un archivo
+
+dput(df1, file = "df1.R")
+
+# Leemos la salida de dput 
+
+n.df1 <- dget("df1.R")
+
+
+# Multiples objetos
+
+x <- "python"
+y <- data.frame(a =2L, b ="d")
+
+# Pasamos a un archivo los objetos con dump()
+dump(c("x","y"), file="df2.R")
+rm(x,y)
+
+# El inverso de dump() es source
+
+source("df2.R")
+str(y)
+```
+
+## Formato  binario para almacenar datos
+
+Aquí hacemos uso  de las funciones `save()` y `save.image()` y `serialize` para  convertir objetos de R en formato binario. Objetos individuales pueden ser guardados con la función `save()`.
+
+```{r computing 135, comment=NA}
+
+a <- data.frame(x = rnorm(50), y = runif(50))
+b <- c(3, 5.6, 1/4)
+
+# Guardamos los a y b en un archivo
+save(a, b, file="df3.rda")
+
+# Cargamos a y b en el workspac
+load("df3.rda")
+
+# Guardamos todo en un archivo (si hay muchos objetos)
+save.image(file="df3.RData")
+load("df3.RData")
+
+# serialize(). no perdemos precision o metadata
+
+x <- list(1,2,3)
+serialize(x,NULL)
+```
+## Interfaces
+
+La data es leida usando interfaces de conexión.
+
+- `file`, se utiliza para conexiones con archivos.
+- `url`, para realizar conexiones a paginas web.
+- `gzfile`.
+- `bzfile`.
+
+```{r computing 137, comment=NA}
+str(file)
+
+# Creamos una conexion a Svm.txt
+svm <- file("Svm.txt")
+
+# Abrimos una conexion a Svm.txt en modo lectura
+open(svm, "r")
+
+# Leemos desde la conexion
+
+svm1 <- read.csv(svm)
+
+# cerramos la conexion
+close(svm)
+
+# Utilizamos readLines()
+
+bosquecito <- file("bosques.txt")
+x <- readLines(bosquecito)
+x
+
+# Abrimos una coleccion URL para leer una pagina
+
+pag <- url("https://www.openintro.org/stat/", "r")
+
+# Leemos la pagina web
+pag1<- readLines(pag)
+
+# Imprimos las primera lineas
+
+head(pag1)
+```
+
 
 ## Subindices y subconjuntos
 
@@ -645,5 +888,89 @@ list.obj[[2]][2] # Accediendo a un elemento individual
 
 # Accediendo a un conjunto de datos desde un objeto lista
 list.obj$dat
+
 ```
     
+## Estructuras de control
+
+### if-else
+
+
+```{r computing3, comment=NA}
+## Generando un numero aleatorio uniforme
+
+x <- runif(1, 0, 10)
+if(x >3){
+  y <- "Hola R"
+}else {
+  y <-"Hola Python"
+}
+```
+
+## for
+
+```{r computing4, comment=NA}
+for(i in 1:8){
+  print(i)
+}
+
+x <- c("Python", "R", "JS", "C++", "Java")
+for(i in 1:5)
+  print(x[i])
+
+for (i in seq_along(x)){
+  print(x[i])
+}
+
+for (leng in x){
+  print(leng)
+}
+
+# for anidados
+
+x <- matrix(1:6, 3, 2)
+
+for (i in seq_len(nrow(x))){
+  for (j in seq_len(ncol(x))){
+    print(x[i,j])
+  }
+}
+```
+## While
+
+```{r computingjj1, comment=NA, eval=FALSE}
+cont <- 0
+while(cont <- 10){
+  print(cont)
+  cont <- cont*2
+}
+
+# Otro ejemplo
+
+z<- 5
+set.seed(1)
+
+while(z>=3 && z<=10){
+  b <- rbinom(1,1,0.5)
+  
+  if(b ==1){
+    z <- z + 1
+  }else{
+    z <- z-1
+  }
+}
+print(z)
+```
+### Variables de entorno
+
+```{r computingb, comment=NA}
+
+
+# Encuentra todas las variables en el entorno R. 
+ls()
+
+# Remueve todas las variables y mucho otros objetos
+
+rm(list = ls())
+
+```
