--- a/DepuracionR/Depuracion_R/Depuracion_R.Rmd
+++ b/DepuracionR/Depuracion_R/Depuracion_R.Rmd
@@ -90,3 +90,46 @@ SC(1,x)
 debug(SC)
 SC(1,x)
 ```
+Que se reproduce como en la consola de R, como 
+```
+Browse[2]> n
+debug en #2: d <- x - mu
+Browse[2]> n
+debug en #3: d2 <- d^2
+Browse[2]> n
+debug en #4: ss <- sum(d2)
+Browse[2]> n
+debug en #5: ss
+Browse[2]> n
+exiting from: SC(1, x)
+[1] 202.5615
+```
+
+Por ejemplo si usamos en la consola, para depurar 
+
+```
+
+Browse[2]> n
+debug en #2: d <- x - mu
+Browse[2]> ls()
+[1] "mu" "x" 
+Browse[2]> n
+debug en #3: d2 <- d^2
+Browse[2]> ls()
+[1] "d"  "mu" "x" 
+Browse[2]> d[1:3]
+[1] -1.5021924 -0.8684688 -1.0789171
+Browse[2]> hist(d)
+Browse[2]> where
+where 1: SC(1, x)
+
+Browse[2]> n
+debug en #4: ss <- sum(d2)
+Browse[2]> Q
+```
+ en el código inicial, se obtiene
+```{r}
+debug(SC)
+SC(1,x)
+```
+
