--- a/Ejercicios-Soluciones/EjerciciosR-4.Rnw
+++ b/Ejercicios-Soluciones/EjerciciosR-4.Rnw
@@ -25,7 +25,7 @@ options(formatR.arrow=TRUE,width=90)
 @
 
 
-\title{Pr\'actica de Laboratorio de R}
+\title{Ejercicios de  R}
 
 
 \author{Curso: Introducci\'on a la Estad\'istica y Probabilidades CM-274}
