--- a/Intro_R/Intro_R.Rmd
+++ b/Intro_R/Intro_R.Rmd
@@ -1,20 +1,20 @@
 ---
-title: "Introducción al lenguaje  R"
+title: "IntroducciÃ³n al lenguaje  R"
 output: 
   html_notebook: 
     highlight: tango
     theme: united
 ---
 
-## ¿Qué  es R?
+## Â¿QuÃ©  es R?
 
-* R es un lenguaje y un entorno de  computación y gráficos estadísticos. La página del proyecto es: 
+* R es un lenguaje y un entorno de  computaciÃ³n y grÃ¡ficos estadÃ­sticos. La pÃ¡gina del proyecto es: 
 https://www.r-project.org/.
-* El entorno de por si, cuenta un gestor de búsqueda : http://www.rseek.org/.
-* R ofrece una amplia variedad de técnicas estadísticas :regresión lineal, análisis de series temporales, booststrap, estimación de máxima verosimilitud, etc .
+* El entorno de por si, cuenta un gestor de bÃºsqueda : http://www.rseek.org/.
+* R ofrece una amplia variedad de tÃ©cnicas estadÃ­sticas :regresiÃ³n lineal, anÃ¡lisis de series temporales, booststrap, estimaciÃ³n de mÃ¡xima verosimilitud, etc .
 
-* Como lenguaje de programación  incluye estructuras de programación como :condicionales, bucles, funciones
-recursivas definidas por el usuario, etc.  La habilidad para combinar funciones de R, produce una óptima flexibilidad y además resulta de ser  una técnica muy útil. Por ejemplo
+* Como lenguaje de programaciÃ³n  incluye estructuras de programaciÃ³n como :condicionales, bucles, funciones
+recursivas definidas por el usuario, etc.  La habilidad para combinar funciones de R, produce una Ã³ptima flexibilidad y ademÃ¡s resulta de ser  una tÃ©cnica muy Ãºtil. Por ejemplo
 
 ```{r}
 f <- function (x) {
@@ -23,24 +23,24 @@ f <- function (x) {
  t(apply(t(rt(10,4)),2,f))
 ```
 *  R, puede  realizar  tareas computacionalmente intensivas, vinculando  lenguajes como C, C++ o
-Fortran en tiempo de ejecución y mejorar el proceso computacional.
+Fortran en tiempo de ejecuciÃ³n y mejorar el proceso computacional.
 
-* Posee facilidades gráficas para el análisis y visualización de datos ya sea en pantalla o en
+* Posee facilidades grÃ¡ficas para el anÃ¡lisis y visualizaciÃ³n de datos ya sea en pantalla o en
 copia impresa como lo realiza la libreria [**ggplot2**](http://ggplot2.org/) de Hadley Wickham.
 
 *  R se maneja por *paquetes*, existe un repositorio oficial de paquetes , organizados por temas:
 
     https://cran.r-project.org/web/packages/available_packages_by_name.html.
     
-* Hay Varios editores están disponibles para trabajar con R:
+* Hay Varios editores estÃ¡n disponibles para trabajar con R:
 
   - [**RStudio**] (http://www.rstudio.com/ide/).
   - [**Eclipse**] (http://www.walware.de/goto/statet).
   - [**Vim-R-Tmux**] (http://manuals.bioinformatics.ucr.edu/home/programming-in-r/vim-r).
 
 
-* R hereda de [**S**](http://ect.bell-labs.com/sl/S/), la programación orientada a Objetos, que puede ser útil en problemas de regresión lineal.
-* R posee **Polimorfismo**, lo que significa que una única función puede ser aplicada a diferentes tipos de entradas, procesando la función de una manera apropiada en cada caso (*función genérica*). Ejemplo de esto es la función `plot()`.
+* R hereda de [**S**](http://ect.bell-labs.com/sl/S/), la programaciÃ³n orientada a Objetos, que puede ser Ãºtil en problemas de regresiÃ³n lineal.
+* R posee **Polimorfismo**, lo que significa que una Ãºnica funciÃ³n puede ser aplicada a diferentes tipos de entradas, procesando la funciÃ³n de una manera apropiada en cada caso (*funciÃ³n genÃ©rica*). Ejemplo de esto es la funciÃ³n `plot()`.
 * Se maneja este paradigma mediantes las clases **Clases S3** y **Clases S4**.
 
 ```{r}
@@ -58,36 +58,36 @@ otype(df$x)
 otype(df$y)
 ```
 
-* R  es un lenguaje de programación funcional (FP), esto significa que proporciona muchas herramientas para la creación y manipulación de las funciones. En particular, R tiene lo que se conoce como **funciones de primera clase**, se puede hacer cualquier cosa con las funciones que se pueden hacer con vectores: se pueden asignar como las variables, almacenarlas en listas, pasarlos como argumentos a otras funciones,etc. Más información en [**funtional programming**](http://adv-r.had.co.nz/Functional-programming.html) de Hadley Wickham.
+* R  es un lenguaje de programaciÃ³n funcional (FP), esto significa que proporciona muchas herramientas para la creaciÃ³n y manipulaciÃ³n de las funciones. En particular, R tiene lo que se conoce como **funciones de primera clase**, se puede hacer cualquier cosa con las funciones que se pueden hacer con vectores: se pueden asignar como las variables, almacenarlas en listas, pasarlos como argumentos a otras funciones,etc. MÃ¡s informaciÃ³n en [**funtional programming**](http://adv-r.had.co.nz/Functional-programming.html) de Hadley Wickham.
 
 * Podemos escribir funciones de C/C++ para ser llamadas desde R. Un ejemplo de esto es el uso del protocolo TCP, que hace R.
 
-* R ofrece dos interfaces C/C++ via las funciones `.c()` y `.Call()`. Esta última es más versátil, pero requiere algo de conocimiento de la estructura interna de R. 
+* R ofrece dos interfaces C/C++ via las funciones `.c()` y `.Call()`. Esta Ãºltima es mÃ¡s versÃ¡til, pero requiere algo de conocimiento de la estructura interna de R. 
 
-* Podemos usar R desde Python, usando **RPy**, una de la más populares interfaces entre esos lenguajes.
+* Podemos usar R desde Python, usando **RPy**, una de la mÃ¡s populares interfaces entre esos lenguajes.
 
-* La computación paralela hace uso de varios procesadores que trabajan juntos para resolver un tarea
-específica. Las aplicaciones de la computación paralela incluyen resolver determinados problemas:
+* La computaciÃ³n paralela hace uso de varios procesadores que trabajan juntos para resolver un tarea
+especÃ­fica. Las aplicaciones de la computaciÃ³n paralela incluyen resolver determinados problemas:
 
-  - Modelos de simulación.
+  - Modelos de simulaciÃ³n.
   - MCMC.
   - Bootstrapping, bigdata, etc.
 
-Más información en el libro de **Parallel R** de Q. Ethan McCallum y Stephen Weston o en el artículo de Daniel Marcelino [**Parallel Processing: When does it worth?**](http://danielmarcelino.com/parallel-processing/).
+MÃ¡s informaciÃ³n en el libro de **Parallel R** de Q. Ethan McCallum y Stephen Weston o en el artÃ­culo de Daniel Marcelino [**Parallel Processing: When does it worth?**](http://danielmarcelino.com/parallel-processing/).
 
-* R cuenta con una lista de paquetes para la computación en paralelo
+* R cuenta con una lista de paquetes para la computaciÃ³n en paralelo
 
   - **Memoria Compartida:** `parallel`, `snow`, `foreach`, `gputools`, `HiPLARM`.
   - **Memoria Distribuida:** `doSnow`, `pbdR`, `Rampi`, `Rhadoop`, `RHIPE`.
 
-* Uno de los  paquetes más importantes que presenta R es  `snow` (un acrónimo de Simple Network of Workstations) que proporciona una interfaz de alto nivel para el uso de cluster en cálculos paralelos en R. Más información en la [**Guia de Usuario de Snow**](http://www.sfu.ca/~sblay/R/snow.html).
+* Uno de los  paquetes mÃ¡s importantes que presenta R es  `snow` (un acrÃ³nimo de Simple Network of Workstations) que proporciona una interfaz de alto nivel para el uso de cluster en cÃ¡lculos paralelos en R. MÃ¡s informaciÃ³n en la [**Guia de Usuario de Snow**](http://www.sfu.ca/~sblay/R/snow.html).
 
 
 ##  Vocabulario R
 
-Una parte importante de entender  [R](https://cran.r-project.org/) es tener conocer los objetos que se va a tratar a lo largo del curso. Esta lista  abarca funciones del paquete base, de estructura de datos, de estadísticas, del entornos de R, I/O, etc.
+Una parte importante de entender  [R](https://cran.r-project.org/) es tener conocer los objetos que se va a tratar a lo largo del curso. Esta lista  abarca funciones del paquete base, de estructura de datos, de estadÃ­sticas, del entornos de R, I/O, etc.
 
-###  Funciones básicas
+###  Funciones bÃ¡sicas
 
 ```
 # Primeras funciones a aprender
@@ -102,14 +102,14 @@ $, [, [[, head, tail, subset
 with
 assign, get
 
-# Comparación 
+# ComparaciÃ³n 
 
 all.equal, identical
 !=, ==, >, >=, <, <=
 is.na, complete.cases
 is.finite
 
-# Matematica básica
+# Matematica bÃ¡sica
 
 *, +, -, /, ^, %%, %/%
 abs, sign
@@ -132,7 +132,7 @@ missing
 on.exit
 return, invisible
 
-# Lógica & conjuntos
+# LÃ³gica & conjuntos
 
 &, |, !, xor
 all, any
@@ -194,7 +194,7 @@ difftime
 julian, months, quarters, weekdays
 library(lubridate)
 
-# Manipulación de caracteres
+# ManipulaciÃ³n de caracteres
 
 grep, agrep
 gsub
@@ -214,7 +214,7 @@ cut, findInterval
 interaction
 options(stringsAsFactors = FALSE)
 
-# Manipulación de arrays
+# ManipulaciÃ³n de arrays
 
 array
 dim
@@ -223,7 +223,7 @@ aperm
 library(abind)
 ```
 
-###  Funciones para Estadística
+###  Funciones para EstadÃ­stica
 
 ```
 # Ordenacion  y  tabulacion
@@ -333,13 +333,13 @@ download.file, library(downloader)
 ```
 ### Ayuda en R
 
-Escribamos una declaración de R
+Escribamos una declaraciÃ³n de R
 
 ```{r}
 mean(1:5)
 ```
 
-Antes de empezar a escribir el código R, lo más importante es saber cómo obtener ayuda. Hay muchas formas de hacer esto. Por ejemplo
+Antes de empezar a escribir el cÃ³digo R, lo mÃ¡s importante es saber cÃ³mo obtener ayuda. Hay muchas formas de hacer esto. Por ejemplo
 
 ```{r}
 ?mean 
@@ -362,7 +362,7 @@ Antes de empezar a escribir el código R, lo más importante es saber cómo obtener
 ```
 
 
-Las funciones `help` y `help.search`  hacen  las mismas cosas que `?` y `??`, respectivamente, pero necesitas incluir  argumentos entre comillas. Los siguientes comandos son equivalentes al lote de código anterior
+Las funciones `help` y `help.search`  hacen  las mismas cosas que `?` y `??`, respectivamente, pero necesitas incluir  argumentos entre comillas. Los siguientes comandos son equivalentes al lote de cÃ³digo anterior
 
 ```
 help("mean")
@@ -372,7 +372,7 @@ help.search("plotting")
 help.search("regression model")
 ```
 
-La función `apropos` encuentra variables (incluyendo funciones) que coinciden con su entrada. Esto es realmente útil si sólo puede recordar a medias el nombre de una variable que ha creado o una función que desea utilizar. Por ejemplo, supongamos que creamos una variable `a_vector`:
+La funciÃ³n `apropos` encuentra variables (incluyendo funciones) que coinciden con su entrada. Esto es realmente Ãºtil si sÃ³lo puede recordar a medias el nombre de una variable que ha creado o una funciÃ³n que desea utilizar. Por ejemplo, supongamos que creamos una variable `a_vector`:
 
 ```{r}
 a_vector <- c(1, 3, 6, 10, 15)
@@ -383,10 +383,10 @@ a_vector
 apropos("vector")
 ```
 
-Los resultados contienen la variable que acaba de crear, `a_vector` y todas las demás variables que contienen el vector de cadena. En este caso, todas las demás son funciones que están integradas en R.
-Encontrar las variables que contienen una cadena en particular está bien, pero también se puede hacer una comparación  con `apropos` utilizando *expresiones regulares*.
+Los resultados contienen la variable que acaba de crear, `a_vector` y todas las demÃ¡s variables que contienen el vector de cadena. En este caso, todas las demÃ¡s son funciones que estÃ¡n integradas en R.
+Encontrar las variables que contienen una cadena en particular estÃ¡ bien, pero tambiÃ©n se puede hacer una comparaciÃ³n  con `apropos` utilizando *expresiones regulares*.
 
-Las expresiones regulares son una sintaxis en varios lenguajes que trata de la coincidencia en las cadenas. Se necesita aprender a usarlos. Cambiarán tu vida.
+Las expresiones regulares son una sintaxis en varios lenguajes que trata de la coincidencia en las cadenas. Se necesita aprender a usarlos. CambiarÃ¡n tu vida.
 
 * [Introduction to regular expressions](http://www.regular-expressions.info/quickstart.html).
 
@@ -404,7 +404,7 @@ grep("ac{2,3}b", cadenas, value = TRUE)
 stringr::str_extract_all(cadenas, "ac{2,3}b", simplify = TRUE)
 ```
 
-Un simple uso de `apropos` por ejemplo podría  encontrar todas las variables que terminan en z o encontrar todas las variables que contengan un número entre 4 y 9:
+Un simple uso de `apropos` por ejemplo podrÃ­a  encontrar todas las variables que terminan en z o encontrar todas las variables que contengan un nÃºmero entre 4 y 9:
 
 ```{r}
 apropos("z$")
@@ -414,7 +414,7 @@ apropos("z$")
 apropos("[4-9]")
 ```
 
-La mayoría de las funciones tienen ejemplos que puedes ejecutar para tener una mejor idea de cómo funcionan. Se utiliza  la función `example` para ejecutarlos. También hay demostraciones  de conceptos que son accesibles con la función `demo`:
+La mayorÃ­a de las funciones tienen ejemplos que puedes ejecutar para tener una mejor idea de cÃ³mo funcionan. Se utiliza  la funciÃ³n `example` para ejecutarlos. TambiÃ©n hay demostraciones  de conceptos que son accesibles con la funciÃ³n `demo`:
 
 ```{r}
 example("plot")
@@ -426,20 +426,20 @@ demo(Japanese)
 
 
 
-R es modular y se divide en **paquetes**,  algunos de los cuales contienen *vignettes*, que son documentos cortos sobre cómo usar los paquetes. Se puede explorar todos los  *vignettes*  usando `browseVignettes`:
+R es modular y se divide en **paquetes**,  algunos de los cuales contienen *vignettes*, que son documentos cortos sobre cÃ³mo usar los paquetes. Se puede explorar todos los  *vignettes*  usando `browseVignettes`:
 
 ```{r}
 browseVignettes()
 ```
 
 
-También puede acceder a un  *vignettes* específico mediante la función `vignette` (pero si su memoria es tan mala como la mía, usar  `browseVignettes` combinado con una búsqueda de página es más fácil que tratar de recordar el nombre de un *vignette* y en qué paquete está):
+TambiÃ©n puede acceder a un  *vignettes* especÃ­fico mediante la funciÃ³n `vignette` (pero si su memoria es tan mala como la mÃ­a, usar  `browseVignettes` combinado con una bÃºsqueda de pÃ¡gina es mÃ¡s fÃ¡cil que tratar de recordar el nombre de un *vignette* y en quÃ© paquete estÃ¡):
 
 ```{r}
 vignette("Sweave", package = "utils")
 ```
 
-El operador de búsqueda de ayuda `??`  y `browseVignettes` sólo encuentran paquetes que hayan sido instalados. Si se desea buscar cualquier  paquete, puede utilizar `RSiteSearch`, que ejecuta una consulta en http://search.r-project.org. Los términos que tenga varias palabras  necesitan ser escritos entre llaves.
+El operador de bÃºsqueda de ayuda `??`  y `browseVignettes` sÃ³lo encuentran paquetes que hayan sido instalados. Si se desea buscar cualquier  paquete, puede utilizar `RSiteSearch`, que ejecuta una consulta en http://search.r-project.org. Los tÃ©rminos que tenga varias palabras  necesitan ser escritos entre llaves.
 
 ```{r}
 RSiteSearch("{Bayesian regression}")
@@ -447,9 +447,9 @@ RSiteSearch("{Bayesian regression}")
 
 Algunos recursos importantes para R, pueden ser:
 
- -  http://www.r-bloggers.com/. Todo lo referente al ecosistema R, esta aquí, gracias a la contribucion de más o menos 450 bloggers.
+ -  http://www.r-bloggers.com/. Todo lo referente al ecosistema R, esta aquÃ­, gracias a la contribucion de mÃ¡s o menos 450 bloggers.
  
- - **Stack Overflow**, Es un sitio para encontrar soluciones a problemas informáticos. 
+ - **Stack Overflow**, Es un sitio para encontrar soluciones a problemas informÃ¡ticos. 
  
   Para R, se tiene el siguiente enlace: http://stackoverflow.com/questions/tagged/r.
  
