Cuaderno de notas sobre inspeccion de  variables y espacios de trabajos en R

--- a/Calculo_basico/Inspeccion-variables_workspace.ipynb
+++ b/Calculo_basico/Inspeccion-variables_workspace.ipynb
@@ -1700,7 +1700,7 @@
     "editable": true
    },
    "source": [
-    "## Examining Variables\n",
+    "## Examinando Variables\n",
     "\n",
     "Siempre que hayamos hecho un cálculo o el nombre de una variable en la consola de R, el resultado se imprime. Esto sucede porque R llama implícitamente al método `print` del objeto.\n",
     "\n",
@@ -2068,7 +2068,9 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2192,7 +2194,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Es útil saber que la función  `attributes` proporciona una lista de todos los atributos que pertenecen a un objeto:"
    ]
@@ -2201,7 +2206,9 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2278,7 +2285,9 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2306,7 +2315,9 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2355,7 +2366,9 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2455,7 +2468,9 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2490,7 +2505,9 @@
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2547,7 +2564,9 @@
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2572,7 +2591,9 @@
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2594,7 +2615,9 @@
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -2611,7 +2634,9 @@
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2686,7 +2711,9 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3392,7 +3419,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## El espacio de trabajo (Workspace)\n",
     "\n",
@@ -3403,7 +3433,9 @@
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3510,7 +3542,9 @@
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3553,7 +3587,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Para más información sobre nuestro espacio de trabajo, podemos ver la estructura de nuestras variables usando `ls.str`. Esto es, como es de esperar, una combinación de las funciones `ls` y `str` y es muy útil durante las sesiones de depuración. `browseEnv` proporciona una capacidad similar, pero muestra su salida en una página HTML en nuestro navegador web:"
    ]
@@ -3562,7 +3599,9 @@
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3579,7 +3618,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Después de trabajar durante un tiempo, especialmente durante la exploración de datos, nuestro espacio de trabajo puede llegar a ser bastante desordenado. Podemos limpiarlo usando la función `rm ` para eliminar variables:"
    ]
@@ -3588,7 +3630,9 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -3600,7 +3644,9 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3697,7 +3743,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
