Cuaderno de notas sobre funciones(3) en R

--- a/Entornos-funciones/Funciones3.ipynb
+++ b/Entornos-funciones/Funciones3.ipynb
@@ -2087,12 +2087,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
+   },
+   "source": [
+    "### Lecturas\n",
+    "\n",
+    "\n",
+    "* [Environments in R](http://digitheadslabnotebook.blogspot.pe/2011/06/environments-in-r.html).\n",
+    "* [A Tutorial on Using Functions in R!](https://www.datacamp.com/community/tutorials/functions-in-r-a-tutorial)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
