--- a/Laboratorios/Laboratorio2.Rmd
+++ b/Laboratorios/Laboratorio2.Rmd
@@ -144,7 +144,7 @@ lines(density(x,bw=1), col='red', lwd=3)
 
 Cuando termines, dale al botton **Commit changes**.
 
-7 . Escribe  `git push origin master`
+7 . Escribe  `git pull`
 
 
 sobre la carpeta donde se encuentra esos archivos, para traer esos cambios a tu directorio local. Revisa los cambios. 
