--- a/Laboratorios/Laboratorio2.Rmd
+++ b/Laboratorios/Laboratorio2.Rmd
@@ -1,6 +1,8 @@
 ---
-title: "Laboratorio 2 "
-output: pdf_document
+title: 'Laboratorio 2 '
+output:
+  html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
