--- a/Laboratorios/Laboratorio3/Laboratorio3.Rmd
+++ b/Laboratorios/Laboratorio3/Laboratorio3.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Laboratorio 3"
-output: pdf_document
+output:
+  html_document: default
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
